fix main element visibility in page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,8 @@ nav {
 main {
   background-color: lightblue;
   /* Make main element take up any surplus space to push footer down */
-  flex: 1 0 auto
+  flex: 1 0 auto;
+  margin-top: 47px
 }
 
 /* Footer */
